tests/trybuild/api_resource_fail_unnamed_fields.rs
use hubuum_client_derive::ApiResource;

#[derive(ApiResource)]
struct WidgetResource(i32);

fn main() {}
